--- a/style.css
+++ b/style.css
@@ -66,7 +66,7 @@ section {
 
 .course-modules h2 {
     font-size: 1.8rem;
-    color: #21C063;
+    color: #FFFFFF;
     margin-bottom: 10px;
     animation: slideInLeft 1s ease;
 }
