--- a/style.css
+++ b/style.css
@@ -7,7 +7,7 @@
 body {
     font-family: 'Poppins', sans-serif;
     background-color: #f4f4f9;
-    color: #333;
+    color: #FFFFFF;
 }
 
 .banner {
