--- a/style.css
+++ b/style.css
@@ -25,6 +25,7 @@ header {
 .welcome-text {
     position: relative;
     text-align: center;
+    background-color: transparent; /* Fundo transparente */
     color: white;
     padding: 20px;
     border-radius: 10px;
@@ -35,10 +36,18 @@ header {
 .welcome-text h1 {
     font-size: 2.5rem;
     margin-bottom: 10px;
+    color: #21C063; /* Cor verde para o título */
 }
 
 .welcome-text p {
     font-size: 1.2rem;
+    color: white; /* Mantém o texto branco */
+    margin-bottom: 15px; /* Espaçamento abaixo do parágrafo */
+}
+
+h1, h2 {
+    color: #21C063; /* Cor para os títulos */
+    margin-bottom: 20px; /* Espaço abaixo dos títulos */
 }
 
 nav {
