--- a/style.css
+++ b/style.css
@@ -8,6 +8,9 @@ body {
     font-family: 'Poppins', sans-serif;
     background-color: #0C131B;
     color: #FFFFFF;
+    background-image: url('https://Geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/M%C3%ADdias/Fundo.png'); /* Substitua por sua imagem */
+    background-size: cover; /* Para cobrir todo o fundo */
+    background-position: center; /* Para centralizar a imagem */
 }
 
 header {
