--- a/style.css
+++ b/style.css
@@ -9,6 +9,11 @@ body {
     background-color: #0C131B; /* Cor de fundo sólida */
     color: #FFFFFF;
 
+    background-image: url('https://geisbelly-vic.github.io/Curso-de-Figma-2024-02/Imagens/M%C3%ADdias/Integrantes.png'); /* URL correta */
+    background-size: cover; /* Para cobrir todo o fundo */
+    background-position: center; /* Para centralizar a imagem */
+    background-repeat: no-repeat; /* Para evitar repetição da imagem */
+
 }
 
 
